# evm-staking-indexer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: image.yml
abi/: Reward.json  Staking.json
doc/: api.md
indexer/: Cargo.toml  config.toml
indexer/src/: api.rs  contract.rs  delegate.rs  error.rs  main.rs  mint.rs  receipt.rs  stake.rs  types.rs  undelegate.rs  validators.rs
scanner/: Cargo.toml  schema.sql
scanner/src/: db.rs  error.rs  main.rs  scanner.rs  tdrpc.rs  types.rs
updater/: Cargo.toml  config.toml
updater/src/: db.rs  error.rs  main.rs  updater.rs
