[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.5"
axum-macros = "0.4.1"
env_logger = "0.11.2"
ethers = { version = "2.0", features = ["abigen", "legacy"] }
log = "0.4.20"
redis = { version = "0.25.4", features = ["json", "tokio-comp"] }
rustc-hex = "2.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["bigdecimal", "runtime-tokio", "postgres", "chrono", "json"]}
tokio = { version = "1.36.0", features = ["full"]}
toml = "0.8.11"
tower-http = { version = "0.5.2",features = ["cors"] }
tracing-subscriber = "0.3.18"
url = "2.5.0"
rand = "0.8.5"
